--- a/data/uses.mdx
+++ b/data/uses.mdx
@@ -6,20 +6,19 @@ title: 'Uses'
 
 ### Computer / Office
 
-- 16" Macbook Pro (2020)
-- Sony MDR-XB650BT
-- Microsoft Wireless Mobile Mouse 1000
-- Dell KB216 Wired Multimedia Keyboard
+- Lenovo 530s-i5
+- Sennheiser HD 350BT
+- Dell Wireless Mouse 
 
 ### Coding
 
-- Editor: Jetbrains [WebStorm, Android Studio, PyCharm] (Yup I'm fancy like that 😜), Jupyter Notebook
-- Languages: Python, Kotlin, Dart, Java
+- Editor: Jetbrains [Android Studio, PyCharm], VS Code, Jupyter Notebook
+- Languages: Python, Kotlin, Dart, Java, 
 - Theme: Just Dark
-- Terminal: Iterm / fish
+- Terminal: Fish
 
 
 ### Other Tech
 
-- OnePlus 6T Mclaren
-- Mi Band 4
+- OnePlus 8
+- Realme watch S
