Blog: Introduction to Adversarial ML

--- a/_posts/2015-10-20-part1-a_ml.md
+++ b/_posts/2015-10-20-part1-a_ml.md
@@ -12,7 +12,11 @@ enabled: true
 
 Hi all, let’s see an interesting case, picture this: you've trained a machine learning model to identify images of dogs and cats accurately. It's performing great during testing and you're excited to deploy it in the real world. But what happens when someone tries to trick the model by feeding it images that are slightly altered, making it misclassify them?
 
-As AI-assisted tools become more prevalent and we witness the upcoming deployment of AI in real-world use cases, it's crucial that we shift our focus not only on several performance metrics but also on the robustness of such models. One thing I have noticed is that we tend to focus more on increasing accuracy or other metrics when creating ML models. For instance, if you're an ML enthusiast who has created models for classification or segmentation tasks, you're likely to evaluate the model's performance based on its accuracy or F1 score. However, we need to consider more factors to ensure that the model doesn't fail in real-world use cases. 
+With the increasing prevalence of AI-assisted tools and the upcoming deployment of AI in real-world use cases, it's crucial that we shift our focus beyond performance metrics and prioritize the robustness of these models. One observation I've made is that we tend to emphasize improving accuracy or other metrics when developing ML models. For example, if you're an ML enthusiast who has created models for classification or segmentation tasks, you're probably measuring the model's performance based on its accuracy or F1 score. However, we need to take into account additional factors to ensure the model doesn't fail in real-world scenarios.
+
+<div class="text-center">
+    {% include figure.html path="assets/img/adversarial_ml/p1/adv_cover_1.png" class="img-fluid rounded z-depth-1" %}
+</div>
 
 Think about it - what if a camera installed at a busy intersection failed to count the number of cars crossing the road due to external disturbances like weather or background noise? Or worse, what if someone could easily trick a face recognition system with a patch that looks similar to your face? These scenarios highlight the pressing need to make AI systems more secure and resilient to such corruption. These corruptions could be Adversarial attacks, in which an attacker intentionally manipulates data to mislead or evade AI systems, which are one example of the potential risks associated with AI. Additionally, AI systems can potentially reveal sensitive personal information if they are not properly secured.
 
@@ -41,23 +45,23 @@ So in this blog let’s first discuss the gradient-based attack.
 
 Let's begin by exploring some practical applications while simultaneously learning the relevant theory. I will be incorporating some mathematical concepts along the way, which may significantly enhance the complexity of the topic. However, I will try to provide relevant links and explanations to ensure that it remains clear and understandable.
 
-To start, I will use a pre-trained ResNet18 model by PyTorch to classify the image of a Goldfish
+To start, I will use a pre-trained ResNet18 model by PyTorch to classify the image of a Indigo
 
 <div class="text-center">
-    {% include figure.html path="assets/img/adversarial_ml/p1/goldfish.png" class="img-fluid rounded z-depth-1" %}
+    {% include figure.html path="assets/img/adversarial_ml/p1/indigo.png" class="img-fluid rounded z-depth-1" %}
 </div>
 
 ```python
 from PIL import Image
 from torchvision import transforms
 
-gold_fish_img = Image.open("goldfish.png")
-transform = transforms.Compose([
+indigo_img = Image.open("indigo.jpg")
+preprocess = transforms.Compose([
    transforms.Resize(224),
    transforms.ToTensor(),
 ])
-gold_fish_tensor = transform(gold_fish_img)[None,:,:,:]
-plt.imshow(gold_fish_tensor[0].numpy().transpose(1,2,0))
+indigo_tensor = preprocess(indigo_img)[None,:,:,:]
+plt.imshow(indigo_tensor[0].numpy().transpose(1,2,0))
 ```
 <div class="text-center">
     {% include figure.html path="assets/img/adversarial_ml/p1/load_gd_img.png" class="img-fluid rounded z-depth-1" %}
@@ -77,7 +81,7 @@ And for prediction -
 trans = transforms.Compose([
    transforms.Normalize((0.485, 0.456, 0.406), (0.229, 0.224, 0.225)),  
 ])
-output = model(trans(gold_fish_tensor))
+output = model(trans(indigo_tensor))
 pred = output.argmax(dim = 1, keepdim = True)
 ```
 
@@ -89,7 +93,7 @@ import json
     print(imagenet_classes[pred.item()])
 
 ```
-Ok everything is working fine our model predicted correctly that it is a Goldfish. Now next we need to generate the perturb data. So before that let’s come to some general concepts of model. So we have input space ***X*** (say), and the output space will be a *k* dimensional vector space (*k* being the number of classes), here the output space vector could be the logit space. So we can define the function for the model something like - 
+Ok everything is working fine our model predicted correctly that it is a Indigo. Now next we need to generate the perturb data. So before that let’s come to some general concepts of model. So we have input space ***X*** (say), and the output space will be a *k* dimensional vector space (*k* being the number of classes), here the output space vector could be the logit space. So we can define the function for the model something like - 
 
 $$ h_\theta : X \rightarrow \mathbb{R}^k $$
 
@@ -116,16 +120,16 @@ $$ l(hθ(x),y)=log(\sum_{n=1}^{\infty} exp(h_\theta(x)_j)) - h_\theta(x)_y $$
 
 too much maths but for our use case we can simple use this function by PyTorch to use the cross entropy loss - 
 ```python
-# 1 is the label index of Gold Fish
 import math
-loss = nn.CrossEntropyLoss()(output,torch.LongTensor([1])).item()
+# [14] is the class of Indigo
+loss = nn.CrossEntropyLoss()(output,torch.LongTensor([14])).item()
 probability = math.exp(-loss)
-print (f"Loss: {loss}, probability of class Goldfish: {probability}")
+print (f"Loss: {loss}, probability of class Indigo: {probability}")
 ```
 
 ```
 Output: 
-Loss: 0.0010887415846809745, probability of class Goldfish: 0.9989118508794051
+Loss: 0.05189608410000801, probability of class Indigo: 0.9494275223323242
 ```
 So if apply exp of this we an approximately as probability which is a good accuracy.
 
@@ -144,5 +148,78 @@ here $\hat{x}$ denotes the adversarial example which is trying to maximize the l
 
 $$ \underset{\delta \in \Delta}{maximize} \text{ }l(h_\theta(x + \delta), y) $$
 
-Now comes the other important topic of discussion i.e. how to decide for this $\Delta$ i.e. allowed set of perturbation. In simple langauge this value can be anything which when added to the actual image, human visually feel no difference with the original input image. So we can apply several types of transformations in the image keeping in mind that it should not affect the semantic content of the image under the added perturbation. Mathematically we define a perturbation set which can be L norms such that we need to bound the added perturbation inside the L norms (\$ L_0, L_1, L_2, or L_\infty \$). The most common is $L_\infty$ ball.
+Now comes the other important topic of discussion i.e. how to decide for this $\Delta$ i.e. allowed set of perturbation. In simple langauge this value can be anything which when added to the actual image, human visually feel no difference with the original input image. So we can apply several types of transformations in the image keeping in mind that it should not affect the semantic content of the image under the added perturbation. Mathematically we define a perturbation set which can be L norms such that we need to bound the added perturbation inside the L norms ($ L_0, L_1, L_2, or L_\infty s$). The most common is $L_\infty$ ball. $L_\infty$ norm for vector a is defined as - 
 
+$$||a||_\infty = \underset{i}{max} \text{ }|a_i|$$
+
+which means it refers to the maximum absolute value of the elements in a vector $a$. So while adding the perturbation in the image we need to take care that the magnitude lie between $[-\epsilon, \epsilon]$. Also we need to make sure that if the iamge is normalised i.e. if all pixel lie between $[0, 1]$ then we need to make sure that $x + \delta $ lie between the same range too. 
+But first let's see a basic example of attacking a model. 
+
+```python
+import torch.optim as optim
+epsilon = 2./255
+#adversarial perturbation
+adv_per = torch.zeros_like(indigo_tensor, requires_grad=True)
+opt = optim.SGD([delta], lr=1e-1)
+
+for ite in range(50):
+    pred = model(trans(indigo_tensor + adv_per))
+    loss = -nn.CrossEntropyLoss()(pred, torch.LongTensor([14]))
+    if ite % 10 == 0:
+        print(f'{ite}: {loss.item()}')
+    
+    opt.zero_grad()
+    loss.backward()
+    opt.step()
+    adv_per.data.clamp_(-epsilon, epsilon)
+    
+print("True class probability:", nn.Softmax(dim=1)(pred)[0,14].item())
+```
+
+```
+Output:
+0: -0.05189608410000801
+10: -21.462343215942383
+20: -26.89446258544922
+30: -28.595821380615234
+40: -27.62549591064453
+Indigo class probability: 1.5631285328610023e-12
+```
+Let's understand the code, here we are using the SGD optimiser for gradient optimiszation using backpropagation. Further we mentioned the value of $\epsilon$ for the making it inside the $L_{inf}$ ball. Next we are initalizing the adversarial perturbation(`adv_perturbation`) which is a zero tensor similar to the input image and the `requires_grad=True` argument specifies that the tensor will be used in a computation graph and that gradients will be computed with respect to it. Next we iterate the 50 gradient step (similar to PGD type attack). So now we're following the same step of first finsing the prediction for `image + adv_per` and then calculated the loss and used the negative sign to maximize the loss by making model more confident in such predictions. Next we clear (`opt.zero_grad()`) previously stored gradient of the optimizer and compute the gradients of the loss w.r.t. `adv_per` using autograd engine. Next `opt.step()` will update the `adv_per` tensor using the gradients computed in the previous step. Over the iteration we also need to keep track that our updated `adv_per` lies between [$-\epsilon, \epsilon$], so for this we use `data.clamp_` to achieve this.
+
+So what did it actually classified as - 
+```python
+max_class = pred.max(dim=1)[1].item()
+print("False predicted class name: ", imagenet_classes[max_class])
+print("False rredicted class probability:", nn.Softmax(dim=1)(pred)[0,max_class].item())
+```
+
+```
+Output:
+False predicted class name:  chickadee
+False predicted class probability: 0.9999942779541016
+```
+
+But this is how chickadee looks like - 
+
+<div class="text-center">
+    {% include figure.html path="assets/img/adversarial_ml/p1/chickadee.jpg" class="img-fluid rounded z-depth-1" %}
+</div>
+
+And this is how it actually looks likes after adding the perturbation
+
+```python
+plt.imshow((indigo_tensor + delta)[0].detach().numpy().transpose(1,2,0))
+```
+
+<div class="text-center">
+    {% include figure.html path="assets/img/adversarial_ml/p1/attacked_indigo.png" class="img-fluid rounded z-depth-1" %}
+</div>
+
+Let's see how the adversarial perturbation looks -
+
+<div class="text-center">
+    {% include figure.html path="assets/img/adversarial_ml/p1/delta.png" class="img-fluid rounded z-depth-1" %}
+</div>
+
+This is the very fundamental implementation of adversarial attack, there are several attacked that we'll learn in the upcoming blogs such as `FGSM, PGD, BIM, Carlini Wagner, etc`. You might say that the `Chickadee` looks similar to an `Indigo`, what if we want to make the  image more different or say targeted towards a particular class. So we'll see that in next blog on how to make the targeted perturbation towards a particular class.
