--- a/_posts/2015-10-20-part1-a_ml.md
+++ b/_posts/2015-10-20-part1-a_ml.md
@@ -10,7 +10,7 @@ related_posts: true
 enabled: true
 ---
 
-Hi all, let’s see an interesting case, picture this: you've trained a machine learning model to identify images of dogs and cats accurately. It's performing great during testing and you're excited to deploy it in the real world. But what happens when someone tries to trick the model by feeding it images that are slightly altered, making it misclassify them?
+Hi all, let’s see an interesting case, picture this: you've trained a machine learning model to identify images of dogs and cats accurately. It's performing great during testing and you're excited to deploy it in the real world. But what happens when someone tries to trick the model by feeding it with images that are slightly altered, making it misclassify them?
 
 With the increasing prevalence of AI-assisted tools and the upcoming deployment of AI in real-world use cases, it's crucial that we shift our focus beyond performance metrics and prioritize the robustness of these models. One observation I've made is that we tend to emphasize improving accuracy or other metrics when developing ML models. For example, if you're an ML enthusiast who has created models for classification or segmentation tasks, you're probably measuring the model's performance based on its accuracy or F1 score. However, we need to take into account additional factors to ensure the model doesn't fail in real-world scenarios.
 
@@ -48,7 +48,7 @@ Let's begin by exploring some practical applications while simultaneously learni
 To start, I will use a pre-trained ResNet18 model by PyTorch to classify the image of a Indigo
 
 <div class="text-center">
-    {% include figure.html path="assets/img/adversarial_ml/p1/indigo.png" class="img-fluid rounded z-depth-1" %}
+    {% include figure.html path="assets/img/adversarial_ml/p1/indigo.jpg" class="img-fluid rounded z-depth-1" %}
 </div>
 
 ```python
@@ -187,7 +187,7 @@ Indigo class probability: 1.5631285328610023e-12
 ```
 Let's understand the code, here we are using the SGD optimiser for gradient optimiszation using backpropagation. Further we mentioned the value of $\epsilon$ for the making it inside the $L_{inf}$ ball. Next we are initalizing the adversarial perturbation(`adv_perturbation`) which is a zero tensor similar to the input image and the `requires_grad=True` argument specifies that the tensor will be used in a computation graph and that gradients will be computed with respect to it. Next we iterate the 50 gradient step (similar to PGD type attack). So now we're following the same step of first finsing the prediction for `image + adv_per` and then calculated the loss and used the negative sign to maximize the loss by making model more confident in such predictions. Next we clear (`opt.zero_grad()`) previously stored gradient of the optimizer and compute the gradients of the loss w.r.t. `adv_per` using autograd engine. Next `opt.step()` will update the `adv_per` tensor using the gradients computed in the previous step. Over the iteration we also need to keep track that our updated `adv_per` lies between [$-\epsilon, \epsilon$], so for this we use `data.clamp_` to achieve this.
 
-So what did it actually classified as - 
+So what did the model actually classified after adding perturbation - 
 ```python
 max_class = pred.max(dim=1)[1].item()
 print("False predicted class name: ", imagenet_classes[max_class])
@@ -200,13 +200,13 @@ False predicted class name:  chickadee
 False predicted class probability: 0.9999942779541016
 ```
 
-But this is how chickadee looks like - 
+But actually this is how chickadee looks like - 
 
 <div class="text-center">
     {% include figure.html path="assets/img/adversarial_ml/p1/chickadee.jpg" class="img-fluid rounded z-depth-1" %}
 </div>
 
-And this is how it actually looks likes after adding the perturbation
+And this how our image looks like after adding perturbation to normal eyes
 
 ```python
 plt.imshow((indigo_tensor + delta)[0].detach().numpy().transpose(1,2,0))
