--- a/_posts/2023-12-10-year-review_2023.md
+++ b/_posts/2023-12-10-year-review_2023.md
@@ -49,9 +49,9 @@ From the beginning of the year, embarking on the journey from a Software Enginee
     {% include figure.html path="assets/img/year-review-2023/life_of_phd.jpeg" width=300 class="img-fluid rounded z-depth-1" %}
 </div>
 
-This was just to give an example, but in general the idea of leaving my job and starting up something new was quite difficult for me, on one hand it was a comfort place for me but on the other I wanted to explore and explore my potentials. Due to my interest in research I decided to quit job and start with a break in the beginning of the year. At that time I considered writing blogs for companies like RoboFlow to get in touch with researchers working in my domain to get some guidance on one how to proceed in the field of Machine Learning at industrial level and second is it really necessary to have some research experience? 
+This was just to give an example, but in general the idea of leaving my job and starting up something new was quite difficult for me, on one hand it was a comfort place for me but on the other I wanted to explore my potentials. Due to my interest in research I decided to quit job and start with a break in the beginning of the year. At that time I considered writing blogs for companies like RoboFlow to get in touch with researchers working in my domain to get some guidance on one how to proceed in the field of Machine Learning at industrial level and second is it really necessary to have some research experience? 
 
-When my blog was on review I started working on other one, the idea was to talk about making AI tools safer. Eager to gather insights, I immersed myself in academic papers such as what excatly is AI safety and how deeply it is rooted to cybersecurity, robustness or ML, and security in general. Founding it interesting, from nowhere I started reaching out to professors to work under there supervision. I got the reply for most of them but soon I realized it's hard for them to take me into there labs as my undergrads is still unfininshed. Day after day I came to know about several constraints such as funding, Visa, need to be an undergradute, and much more. Frustration crept in like an unwelcome guest, threatening to derail my enthusiasm.
+When my blog was on review I started working on other one, the idea was to talk about making AI tools safer. Eager to gather insights, I immersed myself in academic papers such as what excatly is AI safety and how deeply it is rooted to cybersecurity, robustness or ML, and security in general. Founding it interesting, from nowhere I started reaching out to professors to work under their supervision. I got the reply for most of them but soon I realized it's hard for them to take me into their labs as my undergrads is still unfininshed. Day after day I came to know about several constraints such as funding, Visa, need to be an undergradute, and much more. Frustration crept in like an unwelcome guest, threatening to derail my enthusiasm.
 
 Undeterred, I decided to continue my email game, bombarding more inboxes
 with my earnest pleas for a chance. The goal was simple: snag an
@@ -62,7 +62,7 @@ regular job.
 ## The Power of Communication and Networking
 Throughout this time I brainstormed a lot, read 100s of papers, went through 1000 of professor's profiles, and tried figuring what can I do to get a research problem out of it. After reaching out to numerous individuals, I was fortunate enough to secure an opportunity to work alongside one of the most esteemed professors in my field. This experience made me realize the significance of communication. Engaging with people unexpectedly revealed valuable insights. For example I had chance to talk with professors from the top universities such as CMU, MIT, ICL, and much more. Conversations with them introduced a new perspective, emphasizing the importance of continuous learning to make meaningful contributions to the field of machine learning. 
 
-I reached out to individuals I've always admired, and it significantly enhanced my thinking process and problem-solving approach. On non technical level it gave me a confidence that aanything is possible by mere an email or a conversation in general.
+I reached out to individuals I've always admired, and it significantly enhanced my thinking process and problem-solving approach. On non technical level it gave me a confidence that anything is possible by mere an email or a conversation in general.
 
 <div class="text-center">
     {% include figure.html path="https://media0.giphy.com/media/ej1Ajh2zU2ER5YiMdD/giphy.gif?cid=ecf05e47jab8nt0d1i4qyc255ms05hgvahh8fu9hbdkrlgdj&ep=v1_gifs_search&rid=giphy.gif&ct=g" width=300 class="img-fluid rounded z-depth-1" %}
